# NotifyHub

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  задание.txt
.sqlx/: query-3ab73c5b4a80811810fe27ccdf0b5acd6bee9e361542f64b8c8e033a23e57198.json  query-8337c218b9abea632ab196167646716f39978596ff229d2e34efca844a4f5766.json  query-cdb7c330aca2f4224475ad6e180ca5c4aa676994ae0ca2830fb3e23fcd69883d.json  query-dd0b8de8f3ea30b73bf990db0366814d1c6c9abc29540ebf7f92519b5cd17b32.json  query-efc890dee6eaea420b3d65efb0f91338dc8990fb5f184bc1ff3880b41755b4cb.json
migrations/initdb/: create_messages_table.sql
public/: index.html  style.css
src/: handlers.rs  main.rs  worker.rs
tests/: performance_test.rs
